<resources>
    <string name="app_name">Applicate</string>
    <string name="nom_alumne">Alumno 1</string>
    <string name="button_send">Cambiar activity</string>
    <string name="nom">Oriol Mora</string>
    <string name="buscar">Buscar</string>
    <string name="buscarNombre">Buscar por nombre:</string>
    <string name="buscarAula">Buscar por aula:</string>
    <string name="notificar">Notificar</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="assignatura">Java</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_notificacion_titulo">Crear notificación</string>
    <string name="enviar">Enviar</string>
    <string name="motivo">Motivo:</string>
    <string name="descripcion">Descripcion</string>
    <string name="horaFinal">Hora final:</string>
    <string name="horaInicial">Hora inicial:</string>
    <string name="dia">Dia:</string>
    <string name="title_activity_activity_crear_notificacion">ActivityCrearNotificacion</string>
    <string name="title_activity_prueba">PRUEBA</string>
    <string name="aula">A-37</string>
    <string name="title_activity_buscar">BuscarActivity</string>
    <string name="title_activity_activity_grafico">Grafico</string>
    <string name="title_activity_grafico_alumno">GraficoAlumno</string>
</resources>
