<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="applicate.com.sigma.applicate.ActivityCrearNotificacion">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/crear_notificacion_titulo"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputDia"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="date"
            android:text="12/10/1996" />

        <TextView
            android:id="@+id/textHoraInicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/horaInicial"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputHoraInicial"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="time"
            android:text="12:00" />

        <TextView
            android:id="@+id/textHoraFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/horaFinal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputHoraFinal"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="time"
            android:text="14:25" />

        <TextView
            android:id="@+id/textMotivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/motivo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputMotivo"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/descripcion" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="360dp"
        android:background="#65afff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_marginTop="2dp"
            android:textSize="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="3dp"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ab_icon_send"
            android:layout_marginTop="1dp"/>
    </LinearLayout>

</RelativeLayout>
